# db_terminal

./: Cargo.toml  README.md
src/: app.rs  main.rs  state.rs  terminal.rs
src/autocomplete/: mod.rs  suggestions.rs
src/db/: mod.rs
src/event/: cursor.rs  handler.rs  input.rs  mod.rs  navigation.rs  quit.rs  sql.rs
src/ui/: draw.rs  input.rs  layout.rs  mod.rs  result.rs  status.rs  suggestions.rs
