[package]
name = "db_terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
ratatui = "0.27"
sqlparser = "0.46"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "rt"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros"] }
anyhow = "1.0"